glip/static/css/project.css
/* These styles are generated from project.scss. */


.alert-debug {
  color: black;
  background-color: white;
  border-color: #d6e9c6;
}

.alert-error {
  color: #b94a48;
  background-color: #f2dede;
  border-color: #eed3d7;
}

body {
  margin: 0;
  background-color: #212529;
  font-family: 'Helvetica', 'Arial', sans-serif;
}

.navbar-dark .navbar-brand {
  color: #6A5ACD;
}

#broadcaster_id {
  position: absolute;
  display: none;
}

#first {
  position: absolute;
  display: none;
}

.card-group .card {
  background-color: #004B6B;
  margin: 5px;
}

h3 {
  color: #C0C0C0;
}

.card-group .card .card-content .btn {
  background-color: #6A5ACD;
  margin-bottom: 5px;
  border-color: #69353f;
}

#sub-btn {
  white-space: normal;
}

/* Clips cards CSS */

.clip-card {
  overflow: hidden;
}

.clip-card img {
  overflow: hidden;
  vertical-align: top;
  max-width: 100%;
  -moz-transition: all 0.3s;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

/*.clip-card:hover img {*/
/*  -moz-transform: scale(1.05);*/
/*  -webkit-transform: scale(1.05);*/
/*  transform: scale(1.05);*/
/*}*/

textarea:focus,
input[type="text"]:focus,
input[type="password"]:focus,
input[type="datetime"]:focus,
input[type="datetime-local"]:focus,
input[type="date"]:focus,
input[type="month"]:focus,
input[type="time"]:focus,
input[type="week"]:focus,
input[type="number"]:focus,
input[type="email"]:focus,
input[type="url"]:focus,
input[type="search"]:focus,
input[type="tel"]:focus,
input[type="color"]:focus,
.uneditable-input:focus {
  border-color: #6A5ACD;
  box-shadow: 0 1px 1px rgba(106, 90, 205, 1) inset, 0 0 8px rgba(106, 90, 205, 1);
  outline: 0 none;
}


.copyToClipBoard, #loadbtn, .ctaButton {
  border: 2px solid #A16AE8;
!important;
  margin: 10px;
!important;
  color: #C0C0C0;
!important;
  transition: all .0s ease-in-out;
!important;
  border-radius: 15px;
!important;
}

.copyToClipBoard:hover, .copyToClipBoard:focus, .copyToClipBoard:active, #loadbtn:hover, #loadbtn:focus, #loadbtn:active {
  color: #fff;
!important;
  background-color: #603F8B;
!important;
  border-color: #603F8B;
}

.cardText {
  padding: 5px 5px;
  margin: 85% 0px;
  font-size: 1.4rem;
  position: absolute;
  color: white;
  /*border-radius: 10px;*/
}

.card-comments {
  margin: 5px;
  color: #A16AE8;
}

.card-comments:hover, .card-comments:active, .card-comments:focus {
  margin: 5px;
  color: #A16AE8;
}

.card-followslist {
  /*-moz-transition: all 0.3s;*/
  /*-webkit-transition: all 0.3s;*/
  /*transition: all 0.3s;*/
  border: #3E4349;
}

.card-followslist:hover {
  /*-moz-transform: scale(1.05);*/
  /*-webkit-transform: scale(1.05);*/
  /*transform: scale(1.05);*/
  /*  border-radius: 30px;*/
  /*!important;*/
}

.card {
  border-radius: 5px;
!important;
}

.mt-0 {
  margin-top: 10px;
}

.followslist-icon-twitch {
  top: 6px;
  left: 2px;
}

.followslist-icon-film {
  top: 6px;
  right: 2px;
}

.comment-submit {
  margin-bottom: 20px;
  margin-top: 0;
}

/*.followslist-icon-twitch, .followslist-icon-film {
  font-size: 1.4rem;
  position: absolute;
  color: #BF00FF;
  background-color: rgba(0, 0, 0, 0.6);
  padding: 1px 3px;
  border-radius: 2px;
  !*padding: 5px 5px;*!
  z-index: 99999;
}

.followslist-icon-twitch:hover, .followslist-icon-twitch:focus, .followslist-icon-twitch:active, .followslist-icon-film:hover, .followslist-icon-film:focus, .followslist-icon-film:active {
  color: #603F8B;
}*/

.followslist-icon-twitch, .followslist-icon-film {
  color: #BF00FF;
  z-index: 999999;
!important;
}

.followslist-icon-twitch:hover, .followslist-icon-film:hover {
  color: #BF00FF;
}

.customShadowBox {
  background-color: rgba(0, 0, 0, 0.2);
  padding: 100%;
  position: absolute;
  border-radius: 5px;
}

.cardImage {
  border-radius: 5px;
}

.liveDot {
  color: #FF0000;
}

.go-corner {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  width: 40px;
  height: 40px;
  overflow: hidden;
  top: 0;
  right: 0;
  background-color: rgba(0, 0, 0, 0.2);
  border-radius: 0 0 0 32px;
  transition: transform 0.0s ease-out;
}

.go-arrow {
  margin-top: -5px;
  margin-right: -5px;
  color: white;
}

.go-corner-left {
  display: flex;
  align-items: center;
  justify-content: center;
  position: absolute;
  width: 40px;
  height: 40px;
  overflow: hidden;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.2);
  border-radius: 0 0 32px 0;
  transition: transform 0.0s ease-out;
}

.go-arrow-left {
  margin-top: -5px;
  margin-right: -5px;
  color: white;
}

.go-corner:hover, .go-corner-left:hover {
  transform: scale(1.2);
}

.card1 {
  overflow: hidden;
  background-color: rgba(0, 0, 0, .0001) !important;
}

body {
  --focus: hsl(210, 90%, 50%);
  --shadow-1: hsla(236, 50%, 50%, .3);

}

.modal-body {
  color: hsl(220, 50%, 90%);
  /*background: linear-gradient(to right, hsl(248, 30%, 20%), hsl(261, 43%, 45%));*/
  background: rgba(102, 51, 153, 1);
  box-shadow: var(--m-shadow, .4rem .4rem 10.2rem .2rem) var(--shadow-1);
  /*overflow: hidden;*/
}

.modal, .modal-dialog, .modal-content, .modal-body, .embed-responsive .embed-responsive-item {
  min-width: 66.66666666666667vw;
  min-height: 76.19047619047619vh;
}

.modal-content {
  background-color: rgba(0, 0, 0, .0001) !important;
}


.modal-footer {
  color: hsl(220, 50%, 90%);
  /*background: linear-gradient(to right, hsl(248, 30%, 20%), hsl(261, 43%, 45%));*/
  background: rgba(102, 51, 153, 1);
  min-width: 66.66666666666667vw;
}

.modal.fade .modal-dialog {
  -moz-transition: none !important;
  -o-transition: none !important;
  -webkit-transition: none !important;
  transition: none !important;
  -moz-transform: none !important;
  -ms-transform: none !important;
  -o-transform: none !important;
  -webkit-transform: none !important;
  transform: none !important;
}

.closeBtn {
  border: 1px solid white;
!important;
  margin: 10px;
!important;
  color: #FFFFFF;
!important;
  transition: all 0s ease-in-out;
!important;
  border-radius: 15px;
!important;
}

.closeBtn:hover, .closeBtn:focus, .closeBtn:active {
  color: rgba(5, 9, 12, 1);
!important;
  background-color: #FFFFFF;
!important;
  border-color: #FFFFFF;
}

#btn-back-to-top {
  position: fixed;
  bottom: 20px;
  right: 20px;
  display: none;
}

#button {
  display: inline-block;
  background-color: #A16AE8;
  width: 50px;
  height: 50px;
  text-align: center;
  border-radius: 4px;
  position: fixed;
  bottom: 30px;
  right: 30px;
  transition: background-color .0s,
  opacity .5s, visibility .5s;
  opacity: 0;
  visibility: hidden;
  z-index: 1000;
}

#button::after {
  content: "\f077";
  font-family: FontAwesome;
  font-weight: normal;
  font-style: normal;
  font-size: 2em;
  line-height: 50px;
  color: #fff;
}

#button:hover {
  cursor: pointer;
  background-color: #603F8B;
}

#button:active {
  background-color: #555;
}

#button.show {
  opacity: 1;
  visibility: visible;
}

/*#loadmore {*/
/*    margin: 50px auto 0px;*/
/*    display: table;*/
/*    border: none;*/
/*    padding: 10px 20px;*/
/*    font-size: 18px;*/
/*    cursor: pointer;*/
/*    color: #fff;*/
/*    border-radius: 4px;*/
/*    background-color: #2196f3;*/
/*}*/

.homeText {
  border-width: 1px 0;
  list-style: none;
  padding: 0;
  margin-bottom: 100px;
  text-align: center;
  position: relative;
}

svg {
  position: absolute;
  z-index: 0;
  left: 50%;
  transform: translate(-50%);
}

a {
  color: #6A5ACD;
}

.readMore:hover, .readMore:focus, .readMore:active {
  color: #6A5ACD;
}

h3 a {
  color: #fff;
  font-size: 1em;
  text-decoration: none;
  display: inline-block;
  position: relative;
  font-family: 'Dosis', sans-serif;
}

/*effect-underline*/
a.effect-underline:after {
  content: '';
  position: absolute;
  left: 0;
  display: inline-block;
  height: 1em;
  width: 100%;
  border-bottom: 1px solid;
  margin-top: 10px;
  opacity: 0;
  -webkit-transition: opacity 0.0s, -webkit-transform 0.0s;
  transition: opacity 0.0s, transform 0.0s;
  -webkit-transform: scale(0, 1);
  transform: scale(0, 1);
}

a.effect-underline:hover {
  color: #A16AE8;
}

a.effect-underline:hover:after {
  color: #A16AE8;
  opacity: 1;
  -webkit-transform: scale(1);
  transform: scale(1);
}

.ctaButton {
  color: #fff;
!important;
}

.card-group div:nth-child(n+21) {
  display: none;
}

.glip-container {
  /*background-image: linear-gradient(178.1deg, rgba(60, 55, 106, 1) 8.5%, rgba(23, 20, 69, 1) 82.4%);*/
  background-color: rgba(5, 9, 12, 1) !important;
}

.glip-navbar {
  /*background-image: linear-gradient(178.1deg, rgba(60, 55, 106, 0.3) 8.5%, rgba(23, 20, 69, 0.3) 82.4%);*/
  background-color: rgba(5, 9, 12, 1) !important;
}

.glip-navbar {
  /*background: rgb(2, 0, 36);*/
  /*background: linear-gradient(180deg, rgba(2, 0, 36, 1) 16%, rgba(106, 90, 205, 1) 79%, rgba(161, 106, 232, 1) 100%);*/
  bottom: 0;
}

#like-button, #share-button, #no-login-like-button {
  color: #BF00FF;
}

#like-button:hover, #like-button:active, #like-button:after,
#share-button:hover, #share-button:active, #share-button:after,
#share-twitter-button:hover, #share-twitter-button:active, #share-twitter-button:after,
#no-login-like-button:hover, #no-login-like-button:active, #no-login-like-button:after {
  background-color: #212529;
}

.clip-buttons {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-top: 10px;
}

